--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,21 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
  */
+ul.hmenu 
+{
+    list-style: none;	
+    margin: 0 0 2em;
+    padding: 0;
+}
+  
+ul.hmenu li 
+{
+    display: inline;  
+}
+
+
+
+ = require_tree .
+ = require_self
+ 
