--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,20 +10,9 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  */
-ul.hmenu 
-{
-    list-style: none;	
-    margin: 0 0 2em;
-    padding: 0;
-}
-  
-ul.hmenu li 
-{
-    display: inline;  
-}
 
 
 
- = require_tree .
- = require_self
+ //= require_tree .
+ //= require_self
  
