Added bootstrap to devise forms. Added some error handling for Alpha Vantage API

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,8 @@
 
   <body>
     <%= render'welcome/navbar' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert%></p>
     <div class="container">
+      <%= render'welcome/userMsg' %>
       <%= yield %>
     </div>
   </body>
