Can search and add a stock symbol. Retrieves current stock data when added to list.

--- a/app/views/welcome/_navbar.html.erb
+++ b/app/views/welcome/_navbar.html.erb
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
         <li><%= link_to 'Home', root_path %></li>
-        <li><%= link_to 'Search', welcome_lookup_path %></li>
+        <li><%= link_to 'Add', welcome_lookup_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><%= render 'devise/menu/registration_items' %></li>
