--- a/app/views/welcome/_userMsg.html.erb
+++ b/app/views/welcome/_userMsg.html.erb
@@ -1,3 +1,6 @@
+<%if current_user %>
+    <h4>Welcome <%=current_user.email%></h4>
+<%end%>
 <% flash.each do |name, msg|%>
     <div class="alert alert-warning alert-dismissible">
         <button class='close' data-dismiss="alert">
