--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,21 +1,30 @@
 
-
 <h1>Stocks</h1>
 
-<table class="table table-striped table-bordered">
-  <thead>
-    <tr>
-      <th>Symbol</th>
-      <th>Current Price</th>
-      <th>Last Retrieved</th>
-      <th>Notes</th>
-      <th colspan="2">Actions</th>
-    </tr>
-  </thead>
+<br>
 
-  <tbody>
-    <% @stocks.each do |stock| %>
-      <% if stock.user_id == current_user.id %>
+<%= link_to 'New List - TODO', welcome_lookup_path, class:"btn btn-default btn-lg" %>
+
+<br>
+
+<% @stocks.select(:stockList).distinct.each do |cur_list| %>
+  <br>
+  <label style="font-size: 140%;">
+    <%= cur_list.stockList %>
+  </label>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Symbol</th>
+        <th>Current Price</th>
+        <th>Last Retrieved</th>
+        <th>Notes</th>
+        <th colspan="2">Actions</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @stocks.where(stockList: cur_list.stockList).each do |stock| %>
         <tr>
           <td><%= stock.symbol %></td>
           <td><%= number_to_currency(stock.price) %></td>
@@ -24,11 +33,11 @@
           <td><%= link_to 'Show More', stock %></td>
           <td><%= link_to 'Remove', stock, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
-      <%end%>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Stock', welcome_lookup_path, class:"btn btn-default" %>
+      <% end %>
+      <td align="center" colspan="100%">
+        <%= link_to 'New Stock', welcome_lookup_path, class:"btn btn-default" %>
+        <%= link_to 'Delete List - TODO', welcome_lookup_path, class:"btn btn-default" %>
+      </td>
+    </tbody>
+  </table>
+<%end%>
