--- a/app/views/stocks/edit.html.erb
+++ b/app/views/stocks/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', stock: @stock %>
 
-<%= link_to 'Show', @stock %> |
-<%= link_to 'Back', stocks_path %>
+<%= link_to 'Show', @stock, class:"btn btn-default" %> |
+<%= link_to 'Home', stocks_path, class:"btn btn-default" %>
