--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -3,14 +3,14 @@
 
 <br>
 
-<%= link_to 'New List - TODO', welcome_lookup_path, class:"btn btn-default btn-lg" %>
+<%= link_to 'New List', new_stock_list_path, class:"btn btn-default btn-lg" %>
 
 <br>
 
-<% @stocks.select(:stockList).distinct.each do |cur_list| %>
+<% @stock_lists.each do |cur_list| %>
   <br>
   <label style="font-size: 140%;">
-    <%= cur_list.stockList %>
+    <%= cur_list.name %>
   </label>
   <table class="table table-striped table-bordered">
     <thead>
@@ -24,7 +24,7 @@
     </thead>
 
     <tbody>
-      <% @stocks.where(stockList: cur_list.stockList).each do |stock| %>
+      <% @stocks.where(stock_list_id: cur_list.id).each do |stock| %>
         <tr>
           <td><%= stock.symbol %></td>
           <td><%= number_to_currency(stock.price) %></td>
@@ -35,8 +35,8 @@
         </tr>
       <% end %>
       <td align="center" colspan="100%">
-        <%= link_to 'New Stock', welcome_lookup_path, class:"btn btn-default" %>
-        <%= link_to 'Delete List - TODO', welcome_lookup_path, class:"btn btn-default" %>
+        <%= link_to 'New Stock', welcome_lookup_path(list_id: cur_list.id), class:"btn btn-default" %>
+        <%= link_to "Delete Stock List", {:controller => "stock_lists", :action => 'destroy', :id => cur_list.id}, :confirm => "Are you sure?", :method => :delete, class:"btn btn-default" %>
       </td>
     </tbody>
   </table>
