--- a/app/views/stocks/new.html.erb
+++ b/app/views/stocks/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', stock: @stock %>
 
-<%= link_to 'Back', stocks_path %>
+<%= link_to 'Home', stocks_path, class:"btn btn-default" %>
