--- a/app/views/welcome/lookup.html.erb
+++ b/app/views/welcome/lookup.html.erb
@@ -1,16 +1,26 @@
 <h3>Search for specific symbols or companies</h3>
 <br/>
 
-<%= form_tag welcome_lookup_path :method => 'POST' do %>
-    <%= text_field_tag 'sym', nil, placeholder: 'Enter A Symbol Or Company' , size: 50 %>
-    <div class="hidden">
-        <%= text_field_tag 'list_id', value=@list_id%>
+<div class="panel panel-default">
+    <div class="panel-heading">
+    <h2 class ="panel-title">Add New Stock To List</h2>
     </div>
-    <%= submit_tag 'Lookup Stock Symbols' %>
-<% end %>
-<br/>
-<br/>
-<p> Results for: " <%=@sym_search%> " To add to <%=@list_id%> </p>
+    <div class="panel-body">
+        <div class="form-group">
+            <%= form_tag welcome_lookup_path :method => 'POST' do %>
+                <%= text_field_tag 'sym', nil, placeholder: 'Enter A Symbol Or Company' , size: 50 , class:"form-control" %>
+                <div class="hidden">
+                    <%= text_field_tag 'list_id', value=@list_id%>
+                </div>
+                <br/>
+                <%= submit_tag 'Lookup Stock Symbols', class:"btn btn-default" %>
+            <% end %>
+            <br/>
+            <p> Results for: " <%=@sym_search%> " to add to " <%= @list_name%> " List</p>
+        </div>
+    </div>
+</div>
+
 
 <table class="table table-bordered table-stripped">
     <thead>
